src/main/resources/static/css/socialmeals.css
body {
    margin: 0;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
}

.container {
    width: 80%;
    margin: 0 auto;
}

.img-container {
    overflow: hidden;
    height: 200px;
    position: relative;
}

.img {
    display: block;
    width: 100%;
    height: auto;
    position: absolute;
    bottom: 0;
}

.img-text {
    position: absolute;
    color: white;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 50px;
    font-weight: bold;
}

h2 {
    font-size: 1rem;
    text-align: center;
}

h3 {
    font-size: 1.5rem;
    padding-bottom: 1em;
}

.navbar {
    background-color: white;
    width: 100%;
    font-size: 1.2rem;
}

.navbar a:hover {
    background-color: papayawhip;
}

.searchResults {
    margin-left: 90%;
}

.form-control-width {
    width: 80%;
}

.form-control-height {
    margin-top: 2rem;
}

.row-control-height {
    margin-top: 1.5rem;
}

.searchRecipe {
    display: grid;
    grid-gap: 1rem;
    grid-template-columns: minmax(25%, 75%) auto;
}

.button-width {
    width: 100%;
}

.listWithoutStyle{
    list-style-type: none;
}

.updateShoppingList{
    margin-left: -10%;
    padding: 1%;
}

.shoppingListPostIT{
    background:#ffc;
    height: auto;
    width:14em;
    padding:2em;
    box-shadow: 5px 5px 7px dimgrey;
    text-align: left;

}

.row-no-margin{
    margin-left: 0px;
}

.row-even-spacing {
    line-height: 2em;
}

.increase-font, .table {
    font-size: 1.2rem;
}

.star-rating > input, .present-star-rating > input {
    display:none;
}

.star-rating input:checked ~ label, .present-star-rating input:checked ~ label {
    color: #ffca08;
}

.star-rating input:hover ~ label  {
    color: #ffca08;
}

.present-star-rating {
    font-size: 1.2rem;
    margin: 0.1rem;
}

.center {
    align-items: center;
}

.cookingInstructions {
    padding-left: 3em;
    text-align: justify;
}

.stepsSpacing {
    padding: 0.5em;
}

.recipeImage {
    height: 250px;
    width: 250px;
    object-fit: cover;
}

